# roq-algo

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
benchmark/: .clang-tidy  .gitignore  CMakeLists.txt  main.cpp  matcher.cpp  simple.cpp
conda/: meta.yaml
doxygen/: Doxyfile.in
include/roq/: algo.hpp
include/roq/algo/: cache.hpp  factory.hpp  instrument.hpp  leg.hpp  market_data_source.hpp  matcher.hpp  order_cache.hpp  reporter.hpp  strategy.hpp
include/roq/algo/arbitrage/: config.hpp  factory.hpp  parameters.hpp
include/roq/algo/collector/: factory.hpp
include/roq/algo/matcher/: cache.hpp  config.hpp  dispatcher.hpp  factory.hpp  handler.hpp  source.hpp  type.hpp
include/roq/algo/reporter/: factory.hpp  handler.hpp  output_type.hpp  summary.hpp  type.hpp
include/roq/algo/simulator/: config.hpp  source.hpp
include/roq/algo/strategy/: config.hpp  dispatcher.hpp  factory.hpp  handler.hpp  leg.hpp  meta.hpp  type.hpp
include/roq/algo/tools/: market.hpp  market_data.hpp  position_tracker.hpp  time_checker.hpp
include/roq/algo/utils/: common.hpp
src/: CMakeLists.txt
src/roq/: CMakeLists.txt
src/roq/algo/: CMakeLists.txt  main.cpp  reporter.cpp  strategy.cpp
src/roq/algo/arbitrage/: CMakeLists.txt  factory.cpp  instrument.cpp  instrument.hpp  simple.cpp  simple.hpp
src/roq/algo/collector/: CMakeLists.txt  factory.cpp  summary.cpp  summary.hpp
src/roq/algo/matcher/: CMakeLists.txt  factory.cpp  order.cpp  order.hpp  queue_position_simple.cpp  queue_position_simple.hpp  simple.cpp  simple.hpp  utils.hpp
src/roq/algo/reporter/: CMakeLists.txt  factory.cpp  factory.hpp  summary.cpp  summary.hpp
src/roq/algo/simulator/: CMakeLists.txt  config.cpp
src/roq/algo/spreader/: .gitignore  CMakeLists.txt  README.md  application.cpp  application.hpp  config.cpp  config.hpp  deribit.sh  instrument.cpp  instrument.hpp  main.cpp  settings.cpp  settings.hpp  shared.hpp  strategy.cpp  strategy.hpp
src/roq/algo/spreader/flags/: .gitignore  CMakeLists.txt  flags.json  test.json
src/roq/algo/strategy/: CMakeLists.txt  config.cpp  factory.cpp  factory.hpp
src/roq/algo/tools/: CMakeLists.txt  market.cpp  market_data.cpp  market_data.hpp  position_tracker.cpp  position_tracker.hpp  simple.cpp  simple.hpp  time_checker.cpp  time_checker.hpp
src/roq/algo/utils/: CMakeLists.txt  common.cpp
src/simple/: .gitignore  application.cpp  application.hpp  config.cpp  config.hpp  main.cpp  settings.cpp  settings.hpp  strategy.cpp  strategy.hpp
src/simple/flags/: .gitignore  flags.json  test.json
src/tools/: CMakeLists.txt  simple.cpp  simple.hpp
test/: .gitignore  CMakeLists.txt  main.cpp  matcher.cpp  simple.cpp
